--- a/login.html
+++ b/login.html
@@ -135,7 +135,9 @@
   <input type="text" id="username" name="username" placeholder="Username" required>
   <input type="password" id="password" name="password" placeholder="Password" required>
   <button type="submit" class="login-btn">Login</button>
-  <button type="button" class="register-btn" ><a href="register.html">Register</a></button>
+  <!-- <button type="button" class="register-btn" ><a href="/register.html">Register</a></button> -->
+  <a href="/register" class="register-btn">Register</a>
+
 </form>
 
 
@@ -168,7 +170,7 @@
       console.log("Server response:", text);
 
       if (res.ok && text === 'success') {
-        window.location.href = 'index.html';
+        window.location.href = '/dashboard';
       } else {
         alert('Login failed: ' + text);
       }
