--- a/member.html
+++ b/member.html
@@ -153,7 +153,7 @@
   <div class="navbar custom-navbar">
     <div class="logo">李</div>
     <div class="nav-buttons">
-      <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
+      <button class="back" onclick="window.location.href='/dashboard'">Back to Home</button>
       <div class="settings-dropdown" style="position: relative; display: inline-block; margin-left: 10px;">
         <button class="settings" onclick="toggleSettingsDropdown()" title="Settings" style="background-color: #ffd966; color: #222; border-radius: 5px; padding: 10px 20px; border: none; font-size: 15px; cursor: pointer; transition: background 0.2s; min-width: 120px;">
           <span style="vertical-align: middle;">&#9881; Settings</span>
