--- a/haha/item.html
+++ b/haha/item.html
@@ -98,7 +98,7 @@
   <div class="navbar">
     <div class="logo">李</div>
     <div class="nav-buttons">
-      <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
+      <button class="back" onclick="window.location.href='/index'">Back to Home</button>
     </div>
   </div>
 
