--- a/haha/uploadprep.html
+++ b/haha/uploadprep.html
@@ -187,13 +187,13 @@
     <div class="navbar custom-navbar">
       <div class="logo">李</div>
       <div class="nav-buttons">
-        <button class="back" onclick="window.location.href='index.html?refresh=true'">Back to Home</button>
+        <button class="back" onclick="window.location.href='/dashboard'">Back to Home</button>
         <div class="settings-dropdown" style="position: relative; display: inline-block; margin-left: 10px;">
           <button class="settings" onclick="toggleSettingsDropdown()" title="Settings" style="background-color: #ffd966; color: #222; border-radius: 5px; padding: 10px 20px; border: none; font-size: 15px; cursor: pointer; transition: background 0.2s; min-width: 120px;">
             <span style="vertical-align: middle;">&#9881; Settings</span>
           </button>
           <div id="settingsDropdown" class="dropdown-content" style="display: none; position: absolute; right: 0; background: #fffbe6; min-width: 200px; box-shadow: 0 2px 8px rgba(0,0,0,0.12); border-radius: 8px; z-index: 100; padding: 16px 18px 12px 18px;">
-            <button class="profile" onclick="window.location.href='profile.html'" style="width:100%;margin-bottom:10px;background-color:#4fc3f7;color:#fff;">Profile</button>
+            <button class="profile" onclick="window.location.href='/profile'" style="width:100%;margin-bottom:10px;background-color:#4fc3f7;color:#fff;">Profile</button>
             <div class="font-size-dropdown" style="margin-bottom: 12px;">
               <select id="fontSizeSelect" style="border-radius: 5px; padding: 5px; width:100%;">
                 <option value="14px">Small</option>
@@ -416,7 +416,6 @@
         <button onclick="selectCategory('Properties')">Properties</button>
         <button onclick="selectCategory('Jobs')">Jobs</button>
         <button onclick="selectCategory('Electronics')">Electronics</button>
-        <button onclick="selectCategory('Foods')">Foods</button>
       </div>
 
       <!-- Subcategory List -->
@@ -434,41 +433,9 @@
         'Vehicles': ['Cars', 'Motorcycles', 'Bicycles'],
         'Properties': ['Houses', 'Apartments', 'Land'],
         'Jobs': ['Full-time', 'Part-time', 'Freelance'],
-        'Electronics': ['Phones', 'Laptops', 'Cameras'],
-        'Foods': ['Fast food', 'trending', 'Authentic','Light meal', 'Healthy']
+        'Electronics': ['Phones', 'Laptops', 'Cameras']
       };
-      const categoriesMap = new Map([
-        ['Free Items', 1],
-        ['Vehicles', 2],
-        ['Properties', 3],
-        ['Jobs', 4],
-        ['Electronics', 5],
-        ['Foods', 6]
-      ]);
 
-      const subcategoriesMap = new Map([
-        ['Furniture', 1], 
-        ['Clothing', 2],
-        ['Books', 3],
-        ['Cars', 4],
-        ['Motorcycles', 5],
-        ['Bicycles', 6],
-        ['Houses', 7], 
-        ['Apartments', 8], 
-        ['Land', 9],
-        ['Full-time', 10], 
-        ['Part-time', 11], 
-        ['Freelance', 12],
-        ['Phones', 13], 
-        ['Laptops', 14], 
-        ['Cameras', 15],
-        ['Fast Food', 16], 
-        ['Trending', 17], 
-        ['Authentic', 18],
-        ['Light Meal', 19],
-        ['Healthy', 20]
-      ]);
-      
       function selectCategory(category) {
         const subcategoryButtons = document.getElementById('subcategoryButtons');
         subcategoryButtons.innerHTML = '';
@@ -478,28 +445,7 @@
             const button = document.createElement('button');
             button.textContent = subcategory;
             button.onclick = () => {
-
-              function storeCategoryIds(category, subcategory) {
-                const normalizedCategory = category.trim().toLowerCase();
-                const normalizedSubcategory = subcategory.trim().toLowerCase();
-
-                // Find matching category and subcategory (case-insensitive)
-                const categoryId = [...categoriesMap.entries()]
-                  .find(([key]) => key.toLowerCase() === normalizedCategory)?.[1];
-
-                const subcategoryId = [...subcategoriesMap.entries()]
-                  .find(([key]) => key.toLowerCase() === normalizedSubcategory)?.[1];
-
-                if (categoryId && subcategoryId) {
-                  localStorage.setItem('categoryId', categoryId);
-                  localStorage.setItem('subcategoryId', subcategoryId);
-                  console.log('IDs stored successfully.');
-                } else {
-                  console.error('Invalid category or subcategory:', category, subcategory);
-                }
-              }
-              storeCategoryIds(category, subcategory);
-              window.location.href = `upload.html?category=${category}&subcategory=${subcategory}`;
+              window.location.href = `/upload?category=${category}&subcategory=${subcategory}`;
             };
             subcategoryButtons.appendChild(button);
           });
@@ -508,3 +454,4 @@
     </script>
 </body>
 </html>
+
